; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_time-util.c_parse_sec_def_infinity.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_time-util.c_parse_sec_def_infinity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WHITESPACE = common dso_local global i32 0, align 4
@USEC_INFINITY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_sec_def_infinity(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = load i32, i32* @WHITESPACE, align 4
  %8 = call i32 @strspn(i8* %6, i32 %7)
  %9 = load i8*, i8** %4, align 8
  %10 = sext i32 %8 to i64
  %11 = getelementptr inbounds i8, i8* %9, i64 %10
  store i8* %11, i8** %4, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = call i64 @isempty(i8* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %2
  %16 = load i32, i32* @USEC_INFINITY, align 4
  %17 = load i32*, i32** %5, align 8
  store i32 %16, i32* %17, align 4
  store i32 0, i32* %3, align 4
  br label %22

18:                                               ; preds = %2
  %19 = load i8*, i8** %4, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @parse_sec(i8* %19, i32* %20)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %18, %15
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @strspn(i8*, i32) #1

declare dso_local i64 @isempty(i8*) #1

declare dso_local i32 @parse_sec(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
